changed dest file name

--- a/roles/common/tasks/ssh.yml
+++ b/roles/common/tasks/ssh.yml
@@ -5,7 +5,7 @@
 - name: copy changed sshd config options file
   copy:
     src: "files/sshd-options-file"
-    dest: "/etc/ssh/sshd_config.d/00-{{ ansible_distribution }}.conf"
+    dest: "/etc/ssh/sshd_config.d/99-local-sshd.conf"
   notify: restart sshd
 
 # EOF
