--- a/site.yml
+++ b/site.yml
@@ -6,9 +6,9 @@
 
     - name: verify if distro is supported
       fail:
-        msg: The host's distribution is not supported.
+        msg: "The host's distribution is not supported."
       when: >
-        (ansible_distribution != "Rocky" or ansible_distribution_major_version != "9") or
+        (ansible_distribution != "Rocky" or ansible_distribution_major_version != "9") and
         (ansible_distribution != "Ubuntu" or ansible_distribution_major_version != "22")
 
   tasks:
