--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,2 +1,9 @@
 ---
 # tasks file for common
+
+- name: include upgrade all packages task
+  include_tasks:
+    file: "update-{{ ansible_distribution }}.yml"
+  tags: upgrade
+
+# EOF
