added ssh task include

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -11,4 +11,9 @@
     file: "basepackages-{{ ansible_distribution }}.yml"
   tags: baseinstall
 
+- name: include ssh task
+  include_tasks:
+    file: "ssh.yml"
+  tags: baseinstall
+
 # EOF
