--- a/roles/common/tasks/ssh.yml
+++ b/roles/common/tasks/ssh.yml
@@ -3,8 +3,9 @@
 # configure sshd options
 
 - name: copy changed sshd config options file
+  become: yes
   copy:
-    src: "files/sshd-options-file"
+    src: files/sshd-options-file
     dest: "/etc/ssh/sshd_config.d/99-local-sshd.conf"
   notify: restart sshd
 
