--- a/roles/common/tasks/firewall-Rocky.yml
+++ b/roles/common/tasks/firewall-Rocky.yml
@@ -36,7 +36,7 @@
 
     - name: remove ssh service from public zone
       firewalld:
-        zone: internal
+        zone: public
         service: ssh
         permanent: true
         state: disabled
