--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -2,28 +2,50 @@
 # tasks file for common
 
 - name: include upgrade all packages task
-  include_tasks:
+  ansible.builtin.include_tasks:
     file: "update-{{ ansible_distribution }}.yml"
-  tags: upgrade
+    apply:
+      tags:
+        - upgrade
+        - install
+  tags:
+    - upgrade
+    - install
 
 - name: include install base packages task
-  include_tasks:
+  ansible.builtin.include_tasks:
     file: "basepackages-{{ ansible_distribution }}.yml"
-  tags: baseinstall
+    apply:
+      tags:
+        - install
+  tags:
+    - install
 
 - name: include selinux task
-  include_tasks:
+  ansible.builtin.include_tasks:
     file: "selinux.yml"
+    apply:
+      tags:
+        - install
+  tags:
+    - install
   when: ansible_distribution == "Rocky"
 
 - name: include ssh task
-  include_tasks:
+  ansible.builtin.include_tasks:
     file: "ssh.yml"
-  tags: baseinstall
+    apply:
+      tags:
+        - install
+  tags:
+    - install
 
-- name: include firewall task
-  include_tasks:
-    file: "firewall-{{ ansible_distribution }}.yml"
-  tags: baseinstall
+#- name: include firewall task
+#  ansible.builtin.include_tasks:
+#    file: "firewall-{{ ansible_distribution }}.yml"
+#    apply:
+#      - install
+#  tags:
+#    - install
 
 # EOF
