--- a/site.yml
+++ b/site.yml
@@ -5,8 +5,8 @@
   pre_tasks:
 
     - name: verify if distro is supported
-      fail:
-        msg: "The host's distribution is not supported."
+      ansible.builtin.fail:
+        msg: "This playbook is not compatible with the host's distribution."
       when: >
         (ansible_distribution != "Rocky" or ansible_distribution_major_version != "9") and
         (ansible_distribution != "Ubuntu" or ansible_distribution_major_version != "22")
@@ -14,7 +14,10 @@
   tasks:
 
     - name: include common role
-      include_role:
+      ansible.builtin.include_role:
         name: common
+      tags:
+        - install
+        - upgrade
 
 # EOF
