added rocky conditional for firewall task

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -40,12 +40,13 @@
   tags:
     - install
 
-#- name: include firewall task
-#  ansible.builtin.include_tasks:
-#    file: "firewall-{{ ansible_distribution }}.yml"
-#    apply:
-#      - install
-#  tags:
-#    - install
+- name: include firewall task
+  ansible.builtin.include_tasks:
+    file: "firewall-{{ ansible_distribution }}.yml"
+    apply:
+      - install
+  tags:
+    - install
+  when: ansible_distribution == "Rocky"
 
 # EOF
