added tags under apply in firewall task include

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -44,7 +44,8 @@
   ansible.builtin.include_tasks:
     file: "firewall-{{ ansible_distribution }}.yml"
     apply:
-      - install
+      tags:
+        - install
   tags:
     - install
   when: ansible_distribution == "Rocky"
