changed become from yes to true

--- a/roles/common/tasks/update-Ubuntu.yml
+++ b/roles/common/tasks/update-Ubuntu.yml
@@ -1,7 +1,7 @@
 ---
 
     - name: upgrade all packages
-      become: yes
+      become: true
       ansible.builtin.apt:
         name: "*"
         state: latest
