changed become from yes to true

--- a/roles/common/tasks/update-Rocky.yml
+++ b/roles/common/tasks/update-Rocky.yml
@@ -1,7 +1,7 @@
 ---
 
     - name: upgrade all packages
-      become: yes
+      become: true
       dnf:
         name: "*"
         state: latest
