--- a/roles/common/tasks/ssh.yml
+++ b/roles/common/tasks/ssh.yml
@@ -3,7 +3,7 @@
 # configure sshd options
 
 - name: copy changed sshd config options file
-  become: yes
+  become: true
   ansible.builtin.copy:
     src: files/sshd-options-file
     dest: "/etc/ssh/sshd_config.d/99-local-sshd.conf"
