--- a/roles/common/tasks/update-Rocky.yml
+++ b/roles/common/tasks/update-Rocky.yml
@@ -2,7 +2,7 @@
 
     - name: upgrade all packages
       become: true
-      dnf:
+      ansible.builtin.dnf:
         name: "*"
         state: latest
 
