--- a/site.yml
+++ b/site.yml
@@ -4,7 +4,7 @@
 
   pre_tasks:
 
-    - name: verify if distro is supported
+    - name: Verify if distro is supported
       ansible.builtin.fail:
         msg: "This playbook is not compatible with the host's distribution."
       when: >
@@ -13,7 +13,7 @@
 
   tasks:
 
-    - name: include common role
+    - name: Include common role
       ansible.builtin.include_role:
         name: common
       tags:
