--- a/roles/common/tasks/update-Ubuntu.yml
+++ b/roles/common/tasks/update-Ubuntu.yml
@@ -1,6 +1,6 @@
 ---
 
-    - name: upgrade all packages
+    - name: Upgrade all packages
       become: true
       ansible.builtin.apt:
         name: "*"
