fixed name capitlization and changed reboot module to full name

--- a/roles/common/tasks/selinux.yml
+++ b/roles/common/tasks/selinux.yml
@@ -10,8 +10,8 @@
       ansible.posix.selinux:
         state: disabled
 
-    - name: reboot host
-      reboot:
+    - name: Reboot host
+      ansible.builtin.reboot:
 
 # end of disable selinux block
 
