consolidated update tasks, since it's just one command per

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Include upgrade all packages task
   ansible.builtin.include_tasks:
-    file: "update-{{ ansible_distribution }}.yml"
+    file: "update.yml"
     apply:
       tags:
         - upgrade
