split out ssh tasks due to ubuntu 24 changing from sshd.service to ssh.socket

--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -16,4 +16,11 @@
     state: restarted
   listen: "restart sshd"
 
+- name: Restart ssh
+  become: true
+  ansible.builtin.service:
+    name: ssh
+    state: restarted
+  listen: "restart ssh"
+
 # EOF
