added .gitignore and removed minecraft role

--- a/runme.yml
+++ b/runme.yml
@@ -23,4 +23,9 @@
         - install
         - upgrade
 
+    - name: Include minecraft role
+      ansible.builtin.include_role:
+        name: minecraft
+      when: "'minecraft' in group_names"
+
 # EOF
