--- a/runme.yml
+++ b/runme.yml
@@ -25,7 +25,7 @@
 
     - name: Include minecraft role
       ansible.builtin.include_role:
-        name: ansible-role-minecraft
+        name: minecraft
       when: "'minecraft' in group_names"
 
 # EOF
