changed minecraft role name to reppocs.minecraft

--- a/requirements.yml
+++ b/requirements.yml
@@ -2,8 +2,5 @@
 
 roles:
 
-  - name: minecraft
-    src: https://github.com/reppocs/ansible-role-minecraft.git
-    version: main
-
-# EOF
+- src: https://github.com/reppocs/ansible-role-minecraft.git
+  name: reppocs.minecraft
